--- a/mini_proj_train_model.ipynb
+++ b/mini_proj_train_model.ipynb
@@ -509,7 +509,7 @@
     "# -------------------------------------------------------------------------------------------------------\n",
     "\n",
     "\n",
-    "# -------- Model is WIP, should be changed to CNN -------------------------------------------------------\n",
+    "# -------- Model creation -------------------------------------------------------\n",
     "\n",
     "model = Sequential([\n",
     "    layers.Rescaling(1./255, input_shape=(64, 89, 1)),\n",
@@ -524,8 +524,6 @@
     "    layers.Dropout(0.1),\n",
     "    layers.Dense(3)\n",
     "])\n",
-    "\n",
-    "# return the constructed network architecture\n",
     "\n",
     "\n",
     "model.compile(optimizer='adam',\n",
