--- a/mini_proj_train_model.ipynb
+++ b/mini_proj_train_model.ipynb
@@ -235,7 +235,7 @@
     "# -------------------------------------------------------------------------------------------------------\n",
     "\n",
     "\n",
-    "# -------- Model is WIP, should be changed to CNN -------------------------------------------------------\n",
+    "# -------- Model setup ----------------------------------------------------------------------------------\n",
     "\n",
     "model = Sequential([\n",
     "    layers.Rescaling(1./255, input_shape=(64, 89, 3)),\n",
@@ -251,7 +251,6 @@
     "    layers.Dense(3)\n",
     "])\n",
     "\n",
-    "# return the constructed network architecture\n",
     "\n",
     "\n",
     "model.compile(optimizer='adam',\n",
@@ -334,7 +333,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.15"
+   "version": "3.7.15 (default, Nov 24 2022, 18:44:54) [MSC v.1916 64 bit (AMD64)]"
   },
   "vscode": {
    "interpreter": {
